.k8s/service.yaml

---
apiVersion: v1
kind: Service
metadata:
  namespace: my-awesome-project-ns
  name: my-awesome-project-service
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: my-awesome-project-app
