.k8s/service_http.yaml

---
apiVersion: v1
kind: Service
metadata:
  namespace: my-awesome-service-ns
  name: my-awesome-service-service
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: my-awesome-service-app
