.k8s/service_memcached.yaml

---
apiVersion: v1
kind: Service
metadata:
  namespace: my-awesome-service-ns
  name: my-awesome-service-memcached-svc
spec:
  ports:
    - port: 11211
      targetPort: 11211
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: my-awesome-service-memcached
