.k8s/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: my-awesome-service-ns
  name: my-awesome-service-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: sample-app  # use the same group-name to share the ALB (they cost money!)
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80,"HTTPS":443}]' # enable SSL (the ALB-Controller automatically searches for the HOST specified in the rules below and pegs a matching cert to the ALB)
    external-dns.alpha.kubernetes.io/hostname: my-awesome-service.api.yamasa.cloud, my-awesome-service.yamasa.link # if you have a custom domain, add it here and in the TF variable. (this supports a comma-separated list)
spec:
  ingressClassName: alb
  rules:
    - host: my-awesome-service.api.yamasa.cloud
      http: &http_rules
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-awesome-service-service
                port:
                  number: 80
    - host: my-awesome-service.yamasa.link
      http: *http_rules
